patches/bug22
Bottom: 1bbed7ac4edac775bce97929c7aec1a16d57fe21
Top:    c050766cdce3942dba260ed97794445b1a791a56
Author: scott snyder <sss@karma>
Date:   2023-02-12 12:29:11 -0500

hi -

cppcheck... gives an internal error from toLongNumber for this source:

{{{
bool initialize(bool flag, float x1, float x2) {
  if (flag) {   }

  if (x1>-998. and x2>-998.) {
    return false;
  }

  return true;
}
}}}


{{{
$  cppcheck  x.cc
Checking x.cc ...
x.cc:0:0: error: Internal Error. MathLib::toLongNumber: input was not completely consumed: -998.and [cppcheckError]

^
}}}
